#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-31
2015-02-12 Mikhail S. Dubrovin	
- GeometryObject - add method get_geo_pars (PSAS-11)
	
Tag: V00-02-30
2015-01-23 Mikhail S. Dubrovin	
- GeometryObject.det_shape(...) - comment print for debugging
- SegGeometryMatrixV1.cpp - in pixel_mask_array(...) fix logical bug (order of logical operations)
- SegGeometryMatrixV1.py - for matrix-like coordinate system have to use ymesh, xmesh = np.meshgrid(y,x)
	
Tag: V00-02-29
2015-01-22 Mikhail S. Dubrovin	
- add SegGeometryMatrixV1.py/ccp/h - add PNCCD in SegGeometryStore (PSAS-94)
	
Tag: V00-02-28
2015-01-09 Mikhail S. Dubrovin	
- GeometryObject (C++) - fix minor issue with update of coordinate eveluation

Tag: V00-02-27
2015-01-09 Mikhail S. Dubrovin	
- GeometryAccess & GeometryObject (C++ & py) - propagate do-tilt parameter 
	from get_pix_coords and get_pix_coord_indexes to transform_geo_coord_arrays (PSAS-11)

Tag: V00-02-26
2014-11-21 Mikhail S. Dubrovin	
- GeometryAccess.py in img_from_pixel_arrays(iX, iY, W=None, ...) add protection for W=None (PSAS-11)
	
Tag: V00-02-25
2014-11-15 Mikhail S. Dubrovin	
- GenericCalibPars.cpp - replace BASE::Size with BASE::size_base() (PSAS-67)

Tag: V00-02-24
2014-11-13 Mikhail S. Dubrovin	
- CalibParsStore.h - extend conditional output prbits up to 255
- GenericCalibPars.cpp - improve conditional output (PSAS-44)
	
Tag: V00-02-23
2014-11-11 Mikhail S. Dubrovin	
- CalibParsStore.h, GenericCalibPars.cpp - improve all info-printout under control of print_bits (PSAS-44)
	
Tag: V00-02-22
2014-11-06 Mikhail S. Dubrovin	